fixed backround image not covering on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,7 @@ p{
   }
   body{
     overflow: hidden;
+    background-size: auto;
   }
   header {
   font-size: .4rem;
